# chibicc

./: .clang-format  .gitignore  CMakeLists.txt
src/: chibicc.h  hashmap.c  main.c  parse.c  preprocess.c  strings.c  tokenize.c  type.c  unicode.c
src/codegen/: amd64.c
